--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,14 +1,12 @@
 ---
 
-gogs_pkgs:
+gogs_dependency_pkgs:
   - git
   - unzip
 gogs_user: git
 gogs_user_home: /home/git
-gogs_binary_url: https://github.com/gogits/gogs/releases/download/v0.5.13/linux_amd64.zip
-gogs_db_user: gogs
-gogs_db_name: gogs
-gogs_db_pass: password
+gogs_binary_url: https://github.com/gogits/gogs/releases/download
+gogs_version: v0.5.13/linux_amd64.zip
 gogs_config:
   main:
     APP_NAME: 'Gogs: Go Git Service'
