--- a/meta/main.yml
+++ b/meta/main.yml
@@ -8,10 +8,8 @@ galaxy_info:
   platforms:
     - name: Ubuntu
       versions:
-        - all
-    - name: Debian
-      versions:
-        - all
+        - trusty
+        - precise
   categories:
     - development
     - web
