--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,12 +4,12 @@ galaxy_info:
   description: An ansible role for installing and configuring Gogs.
   company: Netronix.be
   license: GPLv3
-  min_ansible_version: 1.8
+  min_ansible_version: 2.2
   platforms:
     - name: Ubuntu
       versions:
+        - xenial
         - trusty
-        - precise
   categories:
     - development
     - web
